test/classes/errors/nilability-init-field-arg/init-field-arg-oknil-unmanaged-from-nonnil-shared.good
init-field-arg-oknil-unmanaged-from-nonnil-shared.chpl:9: In initializer:
init-field-arg-oknil-unmanaged-from-nonnil-shared.chpl:10: error: cannot initialize field MyRecord.lhs of type 'unmanaged MyClass?' from a 'shared MyClass'
  init-field-arg-oknil-unmanaged-from-nonnil-shared.chpl:14: called as MyRecord.init(rhs: shared MyClass)
